# christinanissi.com

./: .editorconfig  .example.env  .example.env.dev  .example.env.prod  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: pre-commit.yml
christinanissi/: asgi.py  settings.py  urls.py
main/: admin.py  feeds.py  forms.py  models.py  signals.py  sitemaps.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_alter_art_description_alter_artimage_caption_and_more.py  0002_alter_user_first_name.py  0002_art_image_imagealbum_writing_delete_post_image_album_and_more.py  0003_alter_artimage_image.py  0004_alter_artimage_art.py  0005_writing_teaser_alter_art_slug_alter_art_title_and_more.py  0006_content_image_remove_artimage_art_and_more.py  0007_remove_image_caption.py  0008_alter_content_options_and_more.py  0009_alter_content_publish_date.py  0010_alter_content_publish_date.py  0011_rename_image_contentimage.py  0012_alter_contentimage_title.py  0013_contentimage_image_thumbnail.py  0014_remove_contentimage_image_thumbnail.py
src/: Dockerfile  Dockerfile.prod  entrypoint.sh  manage.py  pyproject.toml
src/christinanissi/: settings.py  urls.py  wsgi.py
src/main/: admin.py  feeds.py  forms.py  models.py  signals.py  urls.py  views.py
src/main/migrations/: 0001_initial.py  0002_contentimage_image_size.py  0003_alter_contentimage_image_size.py
src/static/css/: main.css
src/templates/: about.html  base.html  contact.html  content_detail.html  content_list.html  detail_template.html  index.html  list_template.html
static/css/: main.css
static/js/: masonry.js
templates/: about.html  art_list.html  base.html  contact.html  content_detail.html  content_list.html  detail_template.html  index.html  list_template.html  writing_list.html
