[tool.poetry]
name = "christinanissi"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.8,<4"
django = ">=2.2"
django-extensions = "*"
psycopg2-binary = "*"
django-taggit = "^3.0.0"
django-summernote = "^0.8.20.0"
Pillow = "^9.2.0"
django-widget-tweaks = "^1.4.12"
gunicorn = "^20.1.0"
Werkzeug = "^2.2.2"
certifi = "^2022.9.24"
sorl-thumbnail = "^12.9.0"
django-recaptcha = "^3.0.0"

[tool.poetry.dev-dependencies]
ipython = "*"
bpython = "*"
pudb = "*"
django-stubs = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
