[tool.poetry]
name = "christinanissi"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.8,<4"
django = ">=4.2.7,<5"
django-extensions = "^3.2.3"
psycopg2-binary = "*"
django-taggit = "^5.0.1"
django-summernote = "^0.8.20.0"
Pillow = ">=10.0.0"
django-widget-tweaks = "^1.5.0"
gunicorn = ">=21.2.0"
Werkzeug = ">=3.0.1"
certifi = ">=2023.7.22"
sorl-thumbnail = "^12.9.0"
django-recaptcha = "^3.0.0"

[tool.poetry.dev-dependencies]
ipython = "*"
bpython = "*"
pudb = "*"
django-stubs = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
